Horizontal Scroll Fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply overflow-x-hidden;
-}
-
 .leaflet-container {
   width: 100%;
   height: 100%;
